2010-02-05  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_search_dialog.c: ADD: Lyric search dialog to enable changing the search conditions.

	* src/ol_lrc_fetch_module.c (ol_lrc_fetch_begin_search): FIX: The search ID in callback is not the one returned.

2010-02-04  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_candidate_list.c: Extract from ol_lrc_fetch_ui.c

	* src/ol_lyric_manage.c: ADD: Lyric manage module

	* src/ol_path_pattern.c (ol_path_pattern_for_each): REFACTORY: Extract from ol_main.c

2010-02-03  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_ui.c: ADD: Options that download the first candidate without prompting the user

	* src/ol_lrc_fetch_module.h (ol_lrc_fetch_begin_search::callback): CHANGE: The interface of searching lyrics is changed

2010-02-02  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_gui.c: CHANGE: Use GtkBuilder instead of Glade

2010-01-30  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch.c: ADD: Serialize/deserialize for OlLrcCandidate
	ADD: Getter/setter for fileds of OlLrcCandidate

2010-01-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/tests/ol_music_info_test.c: ADD: Unit test for music info.

	* src/ol_music_info.c: ADD: Serialize/deserialize for music info.
	ADD: Setters/getters for fields of music info

2010-01-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_fork.c: ADD: Multi-process utility

2010-01-23  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_path_pattern.c: Change the file name of the path pattern module from ``Path Manager'' to ``Path Pattern''

2010-01-22  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_amarok2.c (ol_player_amarok2_get_controller): FIX: Issue 49, infinite recursion when getting status of amarok

2010-01-21  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: ADD: Outline width property for OSD Window

2010-01-19  Tiger Soldier  <tigersoldi@gmail.com>
